--- a/src/styles/_config.sass
+++ b/src/styles/_config.sass
@@ -24,8 +24,8 @@
 
 //user variables
 $font_family_Ubuntu: "Ubuntu", Arial, sans-serif
-$font_size: 18px
-$line_height: 1.3
+$font_size: 1.1rem
+$line_height: 1.4
 $font_weight: 400
 
 // colors
@@ -46,12 +46,12 @@ $icon__hover-color: #f77c1d
 $dot_hover: #ed8434
 
 //breakpoints
-$media_1200: 1200px
-$media_992: 992px
-$media_768: 768px
-$media_576: 576px
-$media_480: 480px
-$media_320: 320px
+$media_1200: 75rem
+$media_992: 62rem
+$media_768: 48rem
+$media_576: 36rem
+$media_480: 30rem
+$media_320: 20rem
 
 =to($max_width)
   @media screen and (max-width: $max_width)
