--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -58,11 +58,10 @@ input[type="radio"].visually-hidden
   overflow: hidden
 
 .button
-  width: 300px
-  height: 50px
-  padding: 10px 20px
+  width: 19rem
+  padding: 0.6rem 1.25rem
   font-family: $font_family_Ubuntu
-  font-size: 24px
+  font-size: 1.5rem
   font-weight: 500
   letter-spacing: 0.05em
   color: #ffffff
@@ -78,14 +77,14 @@ input[type="radio"].visually-hidden
     cursor: pointer
 
 .container
-  max-width: 1366px
-  min-width: 300px
-  padding-right: 33px
-  padding-left: 33px
+  max-width: 85.4rem
+  min-width: 18.7rem
+  padding-right: 2rem
+  padding-left: 2rem
   margin: 0 auto
   +to($media_576)
-    padding-right: 10px
-    padding-left: 10px
+    padding-right: 0.6rem
+    padding-left: 0.6rem
 
 .link-more
   display: flex
@@ -333,6 +332,8 @@ input[type="radio"].visually-hidden
 
 .advantages
   margin-top: 150px
+  +to($media_768)
+    margin-top: 100px
   &__title,
   &__subtitle
     max-width: 500px
@@ -402,6 +403,8 @@ input[type="radio"].visually-hidden
     @include retina
       background-image: url('../images/@2x/BackgroundWhy.jpeg')
       background-image: url('../images/@2x/BackgroundWhy.webp')
+    +to($media_768)
+      margin-top: 100px
   &__wrap
     padding: 50px 33px 100px
   &__title,
@@ -447,6 +450,7 @@ input[type="radio"].visually-hidden
   grid-template-rows: auto
   +to($media_768)
     grid-template-columns: 1fr
+    margin-top: 100px
   &__title,
   &__subtitle
     justify-self: end
@@ -534,8 +538,9 @@ input[type="radio"].visually-hidden
     grid-row: 1 / 4
     display: flex
     justify-self: end
-    & img, source
-       border-radius: 25px
+    border-radius: 25px
+    box-shadow: 0px 1px 15px 0 #21022C
+    overflow: hidden
     +to($media_768)
       margin-top: 30px
       & img, source
@@ -554,6 +559,7 @@ input[type="radio"].visually-hidden
       grid-template-columns: 1fr
   &__item-img
     border-radius: 25px
+    box-shadow: 0px 1px 15px 0 #21022C
     overflow: hidden
     & img, source
       transition: all 0.2s ease-out
@@ -572,6 +578,7 @@ input[type="radio"].visually-hidden
   margin-top: 150px
   +to($media_768)
     padding-bottom: 50px
+    margin-top: 100px
   &__title,
   &__subtitle
     max-width: 500px
@@ -601,17 +608,16 @@ input[type="radio"].visually-hidden
     margin: 50px auto 0
     border-radius: 25px
     box-shadow:  0 0 60px $background_color, -0 -0 60px #ffffff
+    overflow: hidden
     +to($media_768)
       grid-template-columns: 1fr
       grid-template-rows: repeat(2, min-content)
   &__info
     padding: 50px 25px
     background-color: $background_color
-    border-radius: 25px 0 0 25px
     +to($media_768)
       display: flex
       flex-wrap: wrap
-      border-radius: 25px 25px 0 0
     +to($media_576)
       flex-direction: column
       padding: 25px 20px
@@ -700,6 +706,7 @@ input[type="radio"].visually-hidden
   margin-top: 150px
   +to($media_768)
     padding-bottom: 70px
+    margin-top: 100px
   &__title,
   &__subtitle
     max-width: 500px
@@ -735,11 +742,11 @@ input[type="radio"].visually-hidden
   &__item
     border-radius: 25px
     box-shadow:  0 0 60px $background_color, -0 -0 60px #ffffff
+    overflow: hidden
   &__wrap
     display: flex
     padding: 30px
     background-color: $background_color
-    border-radius: 25px 25px 0 0
     +to(1400px)
       flex-direction: column
     +to($media_992)
@@ -814,6 +821,10 @@ input[type="radio"].visually-hidden
 .blog
   position: relative
   margin-top: 150px
+  +to($media_992)
+    padding-bottom: 50px
+  +to($media_768)
+    margin-top: 100px
   &__title,
   &__subtitle
     max-width: 500px
@@ -836,36 +847,33 @@ input[type="radio"].visually-hidden
       bottom: 0
   &__list
     display: grid
-    grid-template-columns: repeat(4, minmax(300px, 1fr))
-    grid-template-rows: 500px 400px
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr))
+    grid-auto-rows: 350px
     grid-gap: 20px
     margin-top: 50px
   &__item
     position: relative
     border-radius: 25px
     overflow: hidden
+    border-radius: 25px
+    box-shadow: 0px 1px 15px 0 #21022C
     &--new
       grid-column: 1 / -1
-      grid-row: 1 / 2
-    &--second
-      grid-column: 1 / 2
-      grid-row: 2 / 3
-    &--third
-      grid-column: 2 / 3
-      grid-row: 2 / 3
     &--fourth
-      grid-column: 3 / 4
-      grid-row: 2 / 3
+      +to($media_992)
+        grid-column: 1 / -1
     &--fifth
-      grid-column: 4 / 5
-      grid-row: 2 / 3
+      +to(1330px)
+        grid-column: 1 / -1
   &__news-link
     display: block
     padding: 20px
     color: $white_color
     border-radius: 25px
     transition: all 0.2s ease-out
-    &:hover
+    &:hover,
+    &:focus,
+    &:active
       &.visible
         transition: all 0.2s ease-out
         transform: scale(1.1)
@@ -884,7 +892,6 @@ input[type="radio"].visually-hidden
       bottom: 0
       right: 0
       background: linear-gradient(360deg, #21022C 0%, rgba(0, 0, 0, 0) 100%)
-      border-radius: 25px
       content: ''
     &.visible
       height: 100%
@@ -935,9 +942,62 @@ input[type="radio"].visually-hidden
     left: 110px
     max-width: 750px
     font-size: 35px
+    +to($media_992)
+      font-size: 18px
+      right: 20px
+      bottom: 20px
+      left: 20px
 
-.index-footer
-  margin-top: 150px
+.footer
   width: 100%
-  height: 300px
-  background-color: #232323
+  margin-top: 100px
+  padding: 50px 0
+  color: #fff
+  background-color: rgb(33, 2, 44)
+  &__wrap
+    display: flex
+    justify-content: space-between
+    flex-wrap: wrap
+    +to($media_768)
+      flex-direction: column
+      align-items: center
+      grid-gap: 35px
+  &__logo
+    text-align: center
+    color: #fff
+    font-size: 36px
+    font-weight: 700
+    text-transform: uppercase
+    transition: all 0.2s ease-out
+    &:hover,
+    &:focus,
+    &:active
+      color: rgb(253, 229, 210)
+  &__menu
+    display: flex
+    flex-wrap: wrap
+    gap: 20px
+    &-link
+      color: #fff
+      transition: all 0.2s ease-out
+      +to($media_576)
+        font-size: 0.8rem
+      &:hover,
+      &:focus,
+      &:active
+        color: rgb(253, 229, 210)
+  &__social
+    display: flex
+    align-items: center
+    flex-wrap: wrap
+  &__facebook
+    margin-right: 10px
+  &__phone
+    margin-top: 15px
+    color: #fff
+    font-size: 12px
+    font-weight: 400
+  &__copyright
+    text-align: center
+    +to($media_768)
+      margin-top: 40px
